appId: com.toughra.ustadmobile
tags:
  - courseBlocks
env:
  TESTRESULTSDIR: "build/reports/maestro/003_003_add_existing_content_in_library_as_block/Screenshots"
  TESTNAME: "003_003_add_existing_content_in_library_as_block"
  TESTCOURSENAME: "Test Course Block"
onFlowStart:
  - startRecording: 002_001_admin_add_new_course_and_teacher
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
# Download test file
- runFlow:
    file: "common/download_file_via_browser.yaml"
    env:
      TESTFILENAME: "Epub_Content1.epub"
- runScript:
    file: "common/import_users_via_http.js"
    env:
      TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
      IMPORT_FROM_CSV_FILE: "Ustad_Teacher_and_Students.csv"
- runFlow:
    file: "common/clear_login_and_add_content.yaml"
    env:
     TESTFILENAME: "H5p_Content.h5p"
     TESTCONTENTNAME: H5PContent
- tapOn: "SAVE"
- launchApp
# adding content to library
- tapOn: "Library"
- tapOn:
    id: "floating_action_button"
- tapOn: "From file"
- runFlow:
    file: "common/select_file_from_picker.yaml"
    env:
      TESTFILENAME: Epub_Content1.epub
- tapOn: "SAVE"
- assertVisible: "Library"

# teacher add existing content in library to course as a content block
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"
- tapOn: "courses"
- tapOn: ${TESTCOURSENAME}
- runFlow:
    file: "common/add_existing_content_block_to_course.yaml"
- tapOn: "E-book"
- tapOn: "Done"
- tapOn: "SAVE"
- runFlow:
    file: "common/add_existing_content_block_to_course.yaml"
- tapOn: "Interactive"
- tapOn: "Done"
- tapOn: "SAVE"
- scrollUntilVisible:
    element:
      text:  "True/False Question"
    direction: DOWN
- assertVisible:
    text:  "True/False Question"
- assertVisible:
    text: "The Adopting of Rosa Marie / (A Sequel to Dandelion Cottage)"
- takeScreenshot: "${TESTRESULTSDIR}/able_to_add_existing_content_block_inside_course"


