
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"
- tapOn: ${TESTCOURSENAME}
# verify content block title is mandatory
- tapOn:
    id: "floating_action_button"
- tapOn: "Add block"
- tapOn: "Content"
- tapOn: "My content"
- tapOn: "Import from file"
- runFlow:
    file: "common/select_file_from_picker.yaml"
    env:
      TESTFILENAME: H5p_Content.h5p
- longPressOn: "True/False Question"
- tapOn: "Select all"
- eraseText
- tapOn: "Next"
#Assertion to make sure the page is not saved because title is blank
- assertNotVisible:
    id: "app_title"
    text: "Edit content block"
- hideKeyboard
- back
- back
- tapOn: "Save"
- runFlow:
    file: "common/add_new_content_block_to_course.yaml"
    env:
      TESTFILENAME: "H5p_Content.h5p"
- scrollUntilVisible:
    element:
      text:  "True/False Question"
    direction: DOWN
- assertVisible:
    text:  "True/False Question"
- runFlow:
    file: "common/add_new_content_block_to_course.yaml"
    env:
      TESTFILENAME: Epub_Content1.epub
- scrollUntilVisible:
    element:
      text:  "The Adopting of Rosa Marie / (A Sequel to Dandelion Cottage)"
    direction: DOWN
- assertVisible:
    text:  "True/False Question"
- scrollUntilVisible:
    element:
      text:  "The Adopting of Rosa Marie / (A Sequel to Dandelion Cottage)"
    direction: DOWN
- assertVisible:
    text: "The Adopting of Rosa Marie / (A Sequel to Dandelion Cottage)"