appId: com.toughra.ustadmobile
tags:
  - courseBlocks
env:
  TESTRESULTSDIR: "build/reports/maestro/003_005_course_view_and_modules_can_expand_collapse/Screenshots"
onFlowStart:
  - startRecording: 003_005_course_view_and_modules_can_expand_collapse
  - clearState: com.toughra.ustadmobile
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
# Import course, students, and teacher
- runScript:
    file: "common/import_users_via_http.js"
    env:
      TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
      IMPORT_FROM_CSV_FILE: "Ustad_Teacher_and_Students.csv"

- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"

- tapOn: "Test Course Block"
- runFlow:
    file: "common/add_demo_block_structure.yaml"
    env:
      MODULETITLE: "SEMESTER 1"
      TEXTTITLE: "PRIMARY COLOURS"
      TEXT: "RED,BLUE,GREEN"
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "stud1"
      PASSWORD: "tests1"
- tapOn: "courses"
- tapOn: "Test Course Block"
# Collapse the module by tapping it
- tapOn: "SEMESTER 1"
- assertNotVisible:
       text: "PRIMARY COLOURS"
- takeScreenshot: "${TESTRESULTSDIR}/able_to_collapse_module"
#--- expand the Module ---#
- tapOn: "SEMESTER 1"
- scrollUntilVisible:
    element:
      text: "PRIMARY COLOURS"
    direction: DOWN
- assertVisible:
    text: "PRIMARY COLOURS"
- takeScreenshot: "${TESTRESULTSDIR}/able_to_expand_module"