appId: com.toughra.ustadmobile
tags:
  - courseBlocks
env:
  TESTRESULTSDIR: "build/reports/maestro/003_006_all_user_able_to_open_text_block/Screenshots"
  TEXTTITLE: "PRIMARY COLOURS"
onFlowStart:
  - startRecording: 003_006_all_user_able_to_open_text_block
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
---
# Import course, students, and teacher
- runScript:
    file: "common/import_users_via_http.js"
    env:
      TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
      IMPORT_FROM_CSV_FILE: "Ustad_Teacher_and_Students.csv"

- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"
- tapOn: "Test Course Block"
- runFlow:
    file: "common/add_demo_block_structure.yaml"
    env:
      MODULETITLE: "SEMESTER 1"
      TEXTTITLE: "PRIMARY COLOURS"
      TEXT: "RED,BLUE,GREEN"
- scrollUntilVisible:
    element:
      text: ${TEXTTITLE}
    direction: DOWN
- tapOn:
    text: ${TEXTTITLE}
- extendedWaitUntil:
    visible: ${TEXTTITLE}
    timeout: 1000
- assertVisible:
          text: "RED,BLUE,GREEN"
- takeScreenshot: "${TESTRESULTSDIR}/text_block_admin_view"
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "stud1"
      PASSWORD: "tests1"
- tapOn: "Test Course Block"
#--- open text block by student---#
- scrollUntilVisible:
    element:
      text: ${TEXTTITLE}
    direction: DOWN
- tapOn: "PRIMARY COLOURS"
- extendedWaitUntil:
    visible: ${TEXTTITLE}
    timeout: 1000
- assertVisible:
    text: "RED,BLUE,GREEN"
- takeScreenshot: "${TESTRESULTSDIR}/text_block_student_view"
#---------Launch App & Teacher Login------------------#
- runFlow: "common/clear_state_and_learning_space_existing_userflow.yaml"
- runFlow: "common/select_site.yaml"
- runFlow:
    file: "common/user_login.yaml"
    env:
      USERNAME: "teach1"
      PASSWORD: "testt1"
- tapOn: "courses"
- tapOn: "Test Course Block"
#--- open text block by teacher ---#
- scrollUntilVisible:
    element:
      text: ${TEXTTITLE}
    direction: DOWN
- tapOn: "PRIMARY COLOURS"
- extendedWaitUntil:
    visible: ${TEXTTITLE}
    timeout: 1000
- assertVisible:
    text: "RED,BLUE,GREEN"
- takeScreenshot: "${TESTRESULTSDIR}/text_block_teacher_view"