appId: com.toughra.ustadmobile
tags:
  - courseBlocks
env:
  TESTRESULTSDIR: "build/reports/maestro/003_008_course_blocks_title_field_is_mandatory/Screenshots"
onFlowStart:
  - startRecording: 003_008_course_blocks_title_field_is_mandatory
  - runScript:
      file: "common/startserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
  - clearState: com.toughra.ustadmobile
onFlowComplete:
  - stopRecording
  - runScript:
      file: "common/stopserver.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}

---
# Download test file
- runFlow:
    file: "common/download_file_via_browser.yaml"
    env:
      TESTFILENAME: "H5p_Content.h5p"
- runFlow: "common/clear_state_and_get_started.yaml"
- runFlow: "common/select_site.yaml"
#admin login
- runFlow:
    file: "common/admin_login.yaml"
- runFlow:
    file: "common/add_course.yaml"
    env:
     TESTCOURSENAME: "Test Course Block Test"
# edit the course to add blocks
- tapOn:
    id: "floating_action_button"
# add module and test title
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- tapOn: "Module"
- tapOn: "Title*"
- inputText: " "
- hideKeyboard
- tapOn: "Done"
#Assertion to make sure the page is not saved because title is blank
- assertNotVisible:
    text: "Add block"
- tapOn: "Title*"
- inputText: "Module block title"
- hideKeyboard
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
- tapOn: "Done"
#add text block and test title
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
- tapOn: "Add block"
- tapOn: "Text"
- tapOn: "Title*"
- inputText: " "
- hideKeyboard
- tapOn: "Done"
#Assertion to make sure the page is not saved because title is blank
- assertNotVisible:
    text: "Add block"
- tapOn: "Title*"
- inputText: "Text block title"
- hideKeyboard
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
- tapOn: "Done"
- assertVisible:
    text: "Add block"
# add content and test title
- scrollUntilVisible:
    element:
      text: "Add block"
    direction: DOWN
# add new content block inside course
- tapOn: "Add block"
- tapOn: "Content"
- tapOn: "My content"
- tapOn: "Import from file"
- runFlow:
    file: "common/select_file_from_picker.yaml"
    env:
        TESTFILENAME: H5p_Content.h5p
- longPressOn: "True/False Question"
- tapOn: "Select all"
- eraseText
- tapOn: "Next"
#Assertion to make sure the page is not saved because title is blank
- assertNotVisible:
    id: "app_title"
    text: "Edit content block"
- inputText: H5p Content
- hideKeyboard
- tapOn: "Description"
- tapOn:
    id: "com.toughra.ustadmobile:id/editor"
- inputText: "test block"
- tapOn: "Done"
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Edit content block"
- tapOn: "Done"
- tapOn: "Save"